--- a/module-2/02-Flexbox-Layout/Unsolved/assets/css/style.css
+++ b/module-2/02-Flexbox-Layout/Unsolved/assets/css/style.css
@@ -9,7 +9,9 @@ body {
 
 main {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 2%;
+  width: 100%;
 }
 
 .main-header {
@@ -21,7 +23,8 @@ main {
 }
 
 .card {
-  flex: 1 0 0;
+  flex: 0 1 1;
+  flex-wrap: wrap;
   padding: 10px;
   text-align: center;
   border-style: solid;
