--- a/module-2/05-CSS-Variables/Unsolved/assets/css/style.css
+++ b/module-2/05-CSS-Variables/Unsolved/assets/css/style.css
@@ -1,3 +1,9 @@
+:root{
+  --main-header-color:#13293d;
+  --blank-white:#fff;
+  --round-corner:50px;
+}
+
 body {
   font-size: 16px;
   display: flex;
@@ -19,8 +25,8 @@ h2 {
 header {
   padding: 40px;
   text-align: center;
-  background: #13293d;
-  color: #fff;
+  background: var(--main-header-color);
+  color: var(--blank-white);
 }
 
 nav {
@@ -29,14 +35,14 @@ nav {
 }
 
 nav a {
-  color: #13293d;
+  color: var(--main-header-color);
   padding: 14px 20px;
   text-decoration: none;
   text-align: center;
 }
 
 nav a:hover {
-  background-color: #fff;
+  background-color: var(--blank-white);
 }
 
 main {
@@ -49,14 +55,14 @@ footer {
   bottom: 0;
   padding: 20px;
   text-align: center;
-  background: #13293d;
-  color: #fff;
+  background: var(--main-header-color);
+  color: var(--blank-white);
   margin-top: auto;
 }
 
 .products {
   flex: 1;
-  background-color: #fff;
+  background-color: var(--blank-white);
   padding: 50px;
   display: flex;
   flex-wrap: wrap;
@@ -66,7 +72,7 @@ footer {
 .card {
   border-style: solid;
   border-width: 1px;
-  border-radius: 50px;
+  border-radius: var(--round-corner);
   padding: 10px;
   flex: 0 0 300px;
   transform: rotate(8deg);
@@ -75,7 +81,7 @@ footer {
 }
 
 .card > header {
-  border-radius: 50px 50px 0px 0px;
+  border-radius: var(--round-corner) var(--round-corner) 0px 0px;
   padding: 20px;
 }
 
